--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,13 +1,11 @@
 .filters {
-    color: white;
+    background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
-    justify-content: right;
     align-items: center;
-    padding-right: 30px;
 }
 
 .filters button {
@@ -18,9 +16,8 @@
     width: 20%;
     border: 0;
     border-radius: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: auto 30px auto auto;
+    align-items: right;
 }
 
 .filters button:hover {
