--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -3,8 +3,8 @@ footer {
     height:60px;
     width:100%;
     border-top: 1px solid #CCCCCC;
-    position:fixed;
-    bottom:0;
+    position: relative;
+    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
