--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -109,6 +109,7 @@
     border-bottom: 1px solid #DDDDDD;
     height: fit-content;
     padding-left: 0;
+    padding-right: 290px;
     text-align: left;
 }
 
