--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -3,9 +3,9 @@ footer {
     height:60px;
     width:100%;
     border-top: 1px solid #CCCCCC;
-    position: relative;
-    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    bottom: 0;
 }
