--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -22,7 +22,7 @@
 .places article {
     text-align: center;
     width: 390px;
-    height: 610px;
+    height:fit-content;
     padding: 20px 20px 20px 20px;
     margin: 20px 20px 20px 20px;
     border: 1px solid #FF5A5F;
